# minecraft-rs

./: .gitignore  .rustfmt.toml  .rusty-hook.toml  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: rust.yml
.hooks/: pre-commit
mcrs-client/: Cargo.toml
mcrs-client/src/: builder.rs  callback.rs  client.rs  events.rs  lib.rs  state.rs
mcrs-client/src/client/: builder.rs  callback.rs  client.rs  mod.rs
mcrs-client/tests/: main.rs
mcrs-protocol/: Cargo.toml
mcrs-protocol/src/: error.rs  game_state.rs
mcrs-protocol/src/legacy/: legacy_ping.rs
mcrs-protocol/src/packets/: handshake.rs  mod.rs  packet.rs
mcrs-protocol/src/packets/login/: login_start.rs  login_success.rs  mod.rs  set_compression.rs
mcrs-protocol/src/packets/play/: chat.rs  disconnect.rs  mod.rs
mcrs-protocol/src/packets/status/: ping.rs  status.rs
mcrs-protocol/tests/: main.rs  packet.rs
mcrs-protocol/tests/packets/: handshake.rs  mod.rs
mcrs-protocol/tests/packets/login/: login_start.rs  login_success.rs  mod.rs  set_compression.rs
mcrs-protocol/tests/packets/play/: disconnect.rs
mcrs-protocol/tests/packets/status/: mod.rs  ping.rs  status.rs
mcrs-server/: Cargo.toml
mcrs-server/examples/proxy/: main.rs
mcrs-server/src/: builder.rs  callback.rs  events.rs  lib.rs  main.old.rs  server.rs
mcrs-server/src/client/: mod.rs
mcrs-server/src/client/handlers/: handle_legacy_ping.rs  handshake_handler.rs  login_handler.rs  mod.rs  packet_handler.rs  status_handler.rs
mcrs-server/tests/: main.rs
src/: error.rs  game_state.rs  lib.rs  main.rs  var_int.rs
src/client/handlers/: handle_legacy_ping.rs  handshake_handler.rs  login_handler.rs  packet_handler.rs  status_handler.rs
src/handlers/: handle_legacy_ping.rs  handshake_handler.rs  login_handler.rs  mod.rs  packet_handler.rs  status_handler.rs
src/lib/: mod.rs  packet.rs  var_int.rs
src/lib/legacy/: legacy_ping.rs  mod.rs
src/lib/packets/: handshake.rs  mod.rs  packet.rs
src/lib/packets/login/: login_start.rs  login_success.rs  mod.rs  set_compression.rs
src/lib/packets/play/: disconnect.rs
src/lib/packets/status/: ping.rs  status.rs
src/packets/: packet.rs
src/packets/login/: login_start.rs
src/packets/play/: disconnect.rs
src/packets/status/: ping.rs  status.rs
tests/: main.rs  packet.rs
