[package]
name = "minecraft-rs"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.79"
thiserror = "1.0.30"
flate2 = { version = "1.0.23", features = [ "zlib" ], default-features = false }

[dev-dependencies]
rusty-hook = "0.11.2"