[package]
name = "mcrs-client"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
mcrs-protocol = { version = "0.4.0", path = "../mcrs-protocol" }

[dev-dependencies]
rusty-hook = "0.11.2"