[package]
name = "mcrs-server"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.79"
thiserror = "1.0.30"
hematite-nbt = "0.5.2"
mcrs-protocol = { version="0.4.0", path = "../mcrs-protocol" }

[dev-dependencies]
rusty-hook = "0.11.2"
